--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
             <div class="start__screen">
                 <div class="content">
                     <div class="heading">
-                        Not only people need a house
+                        You need to rent a car from us
                     </div>
                     <div class="subheading">
-                        We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
+                        We are always ready to offer you any car for rent, doing it as quickly, efficiently and conveniently as possible, and most importantly, do it with love and maximum dedication.
                     </div>
                     <a class="start_button" href="#Pets">Make a Rent</a>
                 </div>
@@ -45,5 +45,25 @@
             </div>
         </div>
     </header>
+    <section class="about" id="About">
+        <div class="container">
+            <div class="about__screen">
+                <div class="about__img">
+                    <img src="src/about.png" alt="">
+                </div>
+                <div class="about__content">
+                    <div class="about__tittle">
+                        <h4 class="about__tittle">About the company "CarHub"</h4> 
+                    </div>
+                    <div class="about__heading">
+                        Currently, there are 200 cars in our showroom, offering a wide range of models and brands. Regardless of your preferences and needs, we strive to satisfy every customer by offering a variety of options.
+                    </div>
+                    <div class="about__heading">
+                        Our collection includes sedans, SUVs, hatchbacks, coupes and many other types of cars. We carefully select cars to ensure that each model meets the highest standards of quality and reliability. Our team of experts is always ready to help you choose the car that best meets your needs and budget. We also offer various financing options to facilitate the car purchase process. Regardless of whether you need a loan or a lease, our team of financial specialists will help you find the most favorable conditions.
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
