feat: cars content

--- a/index.html
+++ b/index.html
@@ -65,5 +65,39 @@
             </div>
         </div>
     </section>
+    <section class="pets" id="Pets">
+        <div class="container">
+            <div class="pets__screen">
+                <div class="pets__heading">
+                    <h4 class="pets__heading">Our Cars<br>
+                        available for rent</h4> 
+                </div>
+                <div class="pets__content">
+                    <div class="pets__list" id="pets__list">
+                        <img src="src/button_arrow_left.png" class="arrow__left" alt="Тут должная быть картинка" onclick="Prev()">
+                        <div class="pets__item i1" onclick="popupToggle(t1)">
+                            <img class="pets__img img1" src="src/a8.jpg" alt="">
+                            <div class="pets__tittle t1" id="t1">Audi A8</div>
+                            <button class="pets__learn">Learn more</button>
+                        </div>
+                        <div class="pets__item i2" onclick="popupToggle(t2)">
+                            <img class="pets__img img2" src="src/m8.jpg" alt="">
+                            <div class="pets__tittle t2" id="t2">BMV M8</div>
+                            <button class="pets__learn">Learn more</button>
+                        </div>
+                        <div class="pets__item i3" onclick="popupToggle(t3)">
+                            <img class="pets__img img3" src="src/camry.jpg" alt="">
+                            <div class="pets__tittle t3" id="t3">Toyota Camry</div>
+                            <button class="pets__learn">Learn more</button>
+                        </div>
+                        <img src="src/button_arrow_right.png" class="arrow__right" alt="Тут должная быть картинка" onclick="Next()">
+                    </div>
+                    <a class="pets__button" href="pets.html">
+                        Get to know the rest
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
