--- a/index.html
+++ b/index.html
@@ -99,5 +99,26 @@
             </div>
         </div>
     </section>
+
+    <div class="popup">
+        <div class="popup__container">
+          <button type="button" class="close-button"></button>
+          <img class="popup__image"
+           src="src/pets-katrine.png"
+           alt="A cute cat">
+           <div class="popup__info">
+            <h2 class="popup__title"></h2>
+            <div class="popup__type"></div>
+            <div class="popup__text"></div>
+            <ul class="popup__detail">
+                <li class="popup__age"><span class="popup__span">Age:</span><p style="display: inline;" class="popup__agep"></p></li>
+                <li class="popup__inoculations"><span class="popup__span">Inoculations:</span><p style="display: inline;" class="popup__inoculationsp"></p></li>
+                <li class="popup__diseases"><span class="popup__span">Diseases:</span><p style="display: inline;" class="popup__diseasesp"></p></li>
+                <li class="popup__parasites"><span class="popup__span">Parasites:</span><p style="display: inline;" class="popup__parasitesp"></p></li>
+            </ul>
+           </div>
+        </div>
+        </div>
+    <script src="script.js"></script>
 </body>
 </html>
