feat: choose us

--- a/index.html
+++ b/index.html
@@ -99,6 +99,55 @@
             </div>
         </div>
     </section>
+    <section class="help" id="Help">
+        <div class="container">
+            <div class="help__screen">
+                <div class="help__heading">
+                    <h4 class="help__heading">Why you should choose us</h4>
+                    
+                </div>
+                <div class="help__list">
+                    <div class="help__item">
+                        <img src="src/c1.svg" alt="" class="help__img">
+                        <div class="help__tittle">Manageability</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c2.svg" alt="" class="help__img">
+                        <div class="help__tittle">Comfortable</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c3.svg" alt="" class="help__img">
+                        <div class="help__tittle">Reliability</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c4.svg" alt="" class="help__img">
+                        <div class="help__tittle">Quality</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c5.svg" alt="" class="help__img">
+                        <div class="help__tittle">Reputation</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c6.svg" alt="" class="help__img">
+                        <div class="help__tittle">Price</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c7.svg" alt="" class="help__img">
+                        <div class="help__tittle">Professionalism</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c8.svg" alt="" class="help__img">
+                        <div class="help__tittle">A large selection</div>
+                    </div>
+                    <div class="help__item">
+                        <img src="src/c9.svg" alt="" class="help__img">
+                        <div class="help__tittle">Flexible conditions</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <div class="popup">
         <div class="popup__container">
