--- a/index.html
+++ b/index.html
@@ -147,7 +147,34 @@
             </div>
         </div>
     </section>
-
+    <footer id="Contacts">
+        <div class="container">
+                <div class="footer_screen">
+                    <div class="footer__item">
+                        <div class="footer__tittle">
+                           <h4 class="footer__tittle">For questions and suggestions</h4> 
+                        </div>
+                        <div class="mail">
+                            <img class="mail__img" src="src/mail.svg" alt=""><a href="mailto:email@shelter.com">email@shelter.com</a>
+                        </div>
+                        <div class="phone">
+                            <img class="phone__img" src="src/phone.svg" alt=""> <a href="tel:+136745677554">+13 674 567 75 54</a>
+                        </div>
+                    </div>
+                    <div class="footer__item">
+                        <div class="footer__tittle2">
+                            We are waiting for your visit
+                        </div>
+                        <div class="footer__address">
+                            <img class="address__img" src="src/pin.svg" alt=""><a href="https://www.google.by/maps/place/Central+St,+Boston,+MA,+%D0%A1%D0%A8%D0%90/@42.3588432,-71.0551304,17z/data=!3m1!4b1!4m6!3m5!1s0x89e370865345ba21:0x44f6c81aa9436fb7!8m2!3d42.3588393!4d-71.0529417!16s%2Fg%2F1tfvj6dm">1 Central Street, Boston (entrance from the store)</a> 
+                        </div>
+                        <div class="footer__address">
+                            <img class="address__img" src="src/pin.svg" alt=""><a href="https://www.google.by/maps/place/South+Park+Court,+18+S+Park+Rd,+London+SW19+8TD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/@51.4202225,-0.2023407,17z/data=!3m1!4b1!4m6!3m5!1s0x487608baa7401b31:0x873a95ca58e122b2!8m2!3d51.4202192!4d-0.200152!16s%2Fg%2F11c1z48z8w">18 South Park, London </a> 
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </footer>
 
     <div class="popup">
         <div class="popup__container">
