--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <ul class="nav__list" id="menu">
                         <li class="nav__item"><a href="#About" class="hyper" onclick="menuClick()">About Us</a></li>
                         <li class="nav__item"><a href="pets.html" class="hyper">Our cars</a></li>
-                        <li class="nav__item"><a href="#Help" class="hyper" onclick="menuClick()">Help the shelter</a></li>
+                        <li class="nav__item"><a href="#Help" class="hyper" onclick="menuClick()">Why are we</a></li>
                         <li class="nav__item"><a href="#Contacts" class="hyper" onclick="menuClick()">Contacts</a></li>
                     </ul>
                 </div>      
