fix: adaptive and discription cars

--- a/pets.html
+++ b/pets.html
@@ -41,42 +41,42 @@
                 <div class="pets__content">
                     <div class="pets__list">
                         <div class="pets__item i1" onclick="popupToggle(t1)">
-                            <img class="pets__img img1" src="src/pets-katrine.png" alt="">
+                            <img class="pets__img img1" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t1" id="t1">Katrine</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
                         <div class="pets__item i2" onclick="popupToggle(t2)">
-                            <img class="pets__img img2" src="src/pets-jennifer.png" alt="">
+                            <img class="pets__img img2" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t2" id="t2">Jennifer</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
                         <div class="pets__item i3" onclick="popupToggle(t3)">
-                            <img class="pets__img img3" src="src/pets-woody.png" alt="">
+                            <img class="pets__img img3" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t3" id="t3">Woody</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
                         <div class="pets__item i4" onclick="popupToggle(t4)">
-                            <img class="pets__img img4" src="src/pets-sophia.png" alt="">
+                            <img class="pets__img img4" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t4" id="t4">Sophia</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
                         <div class="pets__item i5" onclick="popupToggle(t5)">
-                            <img class="pets__img img5" src="src/pets-timmy.png" alt="">
+                            <img class="pets__img img5" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t5" id="t5">Timmy</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
                         <div class="pets__item i6" onclick="popupToggle(t6)">
-                            <img class="pets__img img6" src="src/pets-charly.png" alt="">
+                            <img class="pets__img img6" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t6" id="t6">Charly</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
                         <div class="pets__item i7" onclick="popupToggle(t7)">
-                            <img class="pets__img img7" src="src/pets-scarlet.png" alt="">
+                            <img class="pets__img img7" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t7" id="t7">Scarlett</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
                         <div class="pets__item i8" onclick="popupToggle(t8)">
-                            <img class="pets__img img8" src="src/pets-freddie.png" alt="">
+                            <img class="pets__img img8" src="src/m8.jpg" alt="">
                             <div class="pets__tittle t8" id="t8">Freddie</div>
                             <button class="pets__learn">Learn more</button>
                         </div>
@@ -122,23 +122,22 @@
     </footer>
     <div class="popup">
         <div class="popup__container">
-          <button type="button" class="close-button" style="cursor: pointer;"></button>
+          <button type="button" class="close-button"></button>
           <img class="popup__image"
-           src="src/pets-katrine.png"
+           src="src/m8.jpg"
            alt="A cute cat">
            <div class="popup__info">
             <h2 class="popup__title"></h2>
             <div class="popup__type"></div>
             <div class="popup__text"></div>
             <ul class="popup__detail">
-                <li class="popup__age"><span class="popup__span">Age:</span><p style="display: inline;" class="popup__agep"></p></li>
-                <li class="popup__inoculations"><span class="popup__span">Inoculations:</span><p style="display: inline;" class="popup__inoculationsp"></p></li>
-                <li class="popup__diseases"><span class="popup__span">Diseases:</span><p style="display: inline;" class="popup__diseasesp"></p></li>
-                <li class="popup__parasites"><span class="popup__span">Parasites:</span><p style="display: inline;" class="popup__parasitesp"></p></li>
+                <li class="popup__age"><span class="popup__span">Price:</span><p style="display: inline;" class="popup__agep"></p></li>
+                <li class="popup__inoculations"><span class="popup__span">Max speed:</span><p style="display: inline;" class="popup__inoculationsp"></p></li>
+                <li class="popup__diseases"><span class="popup__span">Acceleration time 0-100 km/h:</span><p style="display: inline;" class="popup__diseasesp"></p></li>
             </ul>
            </div>
         </div>
-        </div>
+    </div>
     <script src="pets.js"></script>
 </body>
 </html>
