--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <img src="src/button_arrow_right.png" class="arrow__right" alt="Тут должная быть картинка" onclick="Next()">
                     </div>
                     <a class="pets__button" href="pets.html">
-                        Get to know the rest
+                        Show all cars
                     </a>
                 </div>
             </div>
